syntax = "proto3";

option go_package = "github.com/sanjevscet/news-grpc/proto/news/v1;newsv1";

package news.v1;

import "google/protobuf/timestamp.proto";

message NewsRequest {
    string id = 1;
    string author = 2;
    string title = 3;
    string summary = 4;
    string content = 5;
    string source = 6;
    repeated string tags = 7;
}

message NewsResponse {
    string id = 1;
    string author = 2;
    string title = 3;
    string summary = 4;
    string content = 5;
    string source = 6;
    repeated string tags = 7;

    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp deleted_at = 10;
}
 
message NewsId {
    string id = 1;
}